[package]
name = "evm-e2e"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
fluentbase-runtime = { path = "../crates/runtime" }
fluentbase-contracts = { path = "../crates/contracts", default-features = false }
fluentbase-sdk = { path = "../crates/sdk" }
fluentbase-genesis = { path = "../crates/genesis", default-features = false }

revm = { version = "27.0.3", package = "revm-rwasm", default-features = false, features = ["std", "serde-json", "serde"] }
#revm = { path = "../../revm-rwasm/crates/revm", default-features = false, features = ["std", "serde-json", "serde"] }
fluentbase-revm = { path = "../crates/revm" }

hash-db = "=0.15"
hex = "0.4"
hashbrown = "0.14"
indicatif = "0.17"
plain_hasher = "0.2"
alloy-rlp = { version = "0.3", default-features = false, features = [
    "arrayvec",
    "derive",
] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
structopt = "0.3"
thiserror = "1.0"
triehash = "0.8"
walkdir = "2.5"
k256 = { version = "0.13.3", features = ["ecdsa"] }
ctor = "0.5.0"

[build-dependencies]
fluentbase-genesis = { path = "../crates/genesis", default-features = false }
fluentbase-sdk = { path = "../crates/sdk", default-features = false }
fluentbase-contracts = { path = "../crates/contracts", default-features = false }
rwasm = { version = "0.3.2", default-features = false, features = ["wasmtime"] }
#rwasm = { path = "../../rwasm", default-features = false, features = ["wasmtime"] }

[features]
default = [
    "std",
    # "debug-print",
    # "wasmtime",
]
std = [
    "fluentbase-genesis/std",
    "fluentbase-sdk/std",
]
debug-print = [
    "revm/debug-print",
    "fluentbase-revm/debug-print",
    # "rwasm/debug-print",
]
wasmtime = [
    "fluentbase-revm/wasmtime",
]

