[package]
name = "evm-e2e"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
fluentbase-runtime = { path = "../crates/runtime" }
fluentbase-sdk = { path = "../crates/sdk" }
fluentbase-genesis = { path = "../crates/genesis", default-features = false }
fluentbase-revm = { path = "../crates/revm" }

revm = { git = "https://github.com/fluentlabs-xyz/revm-rwasm.git", branch = "v103-patched", default-features = false, features = ["std", "serde-json", "serde"] }
#revm = { path = "../../revm-rwasm/crates/revm", default-features = false, features = ["std", "serde-json", "serde"] }

hash-db = "=0.15"
hex = "0.4"
indicatif = "0.17"
plain_hasher = "0.2"
alloy-rlp = { version = "0.3", default-features = false, features = [
    "arrayvec",
    "derive",
] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
structopt = "0.3"
thiserror = "1.0"
triehash = "0.8"
walkdir = "2.5"
k256 = { version = "0.13.3", features = ["ecdsa"] }

[features]
default = [
    "std",
    # "debug-print",
    "wasmtime",
    # "fluent-testnet"
]
std = [
    "fluentbase-genesis/std",
    "fluentbase-sdk/std",
]
debug-print = [
    "revm/debug-print",
    "fluentbase-revm/debug-print",
    "fluentbase-sdk/debug-print",
    "fluentbase-runtime/debug-print",
    # "rwasm/debug-print",
]
wasmtime = [
    "fluentbase-revm/wasmtime",
]
fluent-testnet = [
    "fluentbase-runtime/fluent-testnet",
    "fluentbase-sdk/fluent-testnet",
    "fluentbase-genesis/fluent-testnet",
    "fluentbase-revm/fluent-testnet",
]

[patch.crates-io]
rwasm = { git = "https://github.com/fluentlabs-xyz/rwasm", branch = "devel" }
