[workspace]
members = ["*"]
exclude = [".cargo", "svm"]
resolver = "2"

[workspace.package]
authors = [
    "Dmitry Savonin <dmitry@fluentlabs.xyz>",
]
repository = "https://github.com/fluentlabs-xyz/fuentbase"
edition = "2021"
license = "MIT"
keywords = ["wasm", "webassembly", "interpreter", "vm"]
categories = ["wasm", "no-std", "virtualization"]
readme = "README.md"

[workspace.dependencies]
fluentbase-sdk = { path = "../crates/sdk", default-features = false }
hex-literal = { version = "0.4.1", default-features = false }
alloy-sol-types = { version = "1.2.0", default-features = false, features = ["json"] }
serde = { version = "1.0.203", default-features = false, features = ["derive", "rc"] }
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
fluentbase-sdk-testing = { path = "../crates/testing" }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }

[profile.release]
panic = "abort"
lto = "fat"
opt-level = 3
strip = true
debug = false
debug-assertions = false
rpath = false
codegen-units = 1
overflow-checks = false

[profile.dev]
# Optimize WASM for size in debug to avoid massive binaries that slow compilation
opt-level = "z"
debug = false
strip = "symbols"

