[package]
name = "fluentbase-runtime"
version = "0.1.0"
authors.workspace = true
repository.workspace = true
edition.workspace = true
readme.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
fluentbase-rwasm = { path = "../rwasm", optional = true }
fluentbase-poseidon = { path = "../poseidon", optional = true }
fluentbase-zktrie = { path = "../zktrie", optional = true }
lazy_static = { version = "1.4.0", optional = true }
tiny-keccak = { version = "2.0", features = ["sha3"], optional = true }
tokio = { version = "1.33", features = ["full"], optional = true }
ethereum-types = { version = "0.14.1", optional = true }
ethers-core = { version = "2.0.7", optional = true }
hex = { version = "0.4.3", optional = true }
web3 = { version = "0.19.0", optional = true }
ethereum = { version = "0.14.0", optional = true }
ethers = { version = "2.0.10", optional = true }
serde = { version = "1", optional = true }
serde_json = { version = "1", optional = true }
strum = { version = "0.25.0", optional = true }
bincode = { version = "1.3.3", optional = true }
hex-literal = { version = "0.4.1", optional = true }
bytes = { version = "1.5.0", optional = true }
byteorder = { workspace = true, optional = true }
halo2curves = { workspace = true, optional = true }
strum_macros = { version = "0.25.2", optional = true }
wasi = { version = "0.11.0", optional = true }
wat = { version = "1.0.69", optional = true }
thiserror = { version = "1.0.40", optional = true }
keccak-hash = { version = "0.10.0", optional = true }
eth_trie = { version = "0.3.0", optional = true }
rlp = { version = "0.5.2", optional = true }
bitvec = { version = "1", optional = true }
k256 = { version = "0.13.1", optional = true }
sha2 = { version = "0.10.8", optional = true }
once_cell = { version = "1.19.0", optional = true }

[dev-dependencies]
wat = "1.0.69"
hex-literal = "0.4.1"

[features]
default = ["main"]
types = []
main = [
    "types",
    "fluentbase-rwasm",
    "fluentbase-poseidon",
    "fluentbase-zktrie",
    "lazy_static",
    "tiny-keccak",
    "tokio",
    "ethereum-types",
    "ethers-core",
    "hex",
    "web3",
    "ethereum",
    "ethers",
    "serde",
    "serde_json",
    "strum",
    "bincode",
    "hex-literal",
    "bytes",
    "byteorder",
    "halo2curves",
    "strum_macros",
    "wasi",
    "wat",
    "thiserror",
    "keccak-hash",
    "eth_trie",
    "rlp",
    "bitvec",
    "k256",
    "sha2",
    "once_cell",
]
