[package]
name = "fluentbase-runtime"
version = "0.1.0"
authors.workspace = true
repository.workspace = true
edition.workspace = true
readme.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
fluentbase-rwasm = { path = "../rwasm" }
fluentbase-poseidon = { path = "../poseidon" }
fluentbase-zktrie = { path = "../zktrie" }
fluentbase-types = { path = "../types" }
lazy_static = { version = "1.4.0" }
tiny-keccak = { version = "2.0", features = ["sha3"] }
tokio = { version = "1.33", features = ["full"] }
ethereum-types = { version = "0.14.1" }
ethers-core = { version = "2.0.7" }
hex = { version = "0.4.3" }
web3 = { version = "0.19.0" }
ethereum = { version = "0.14.0" }
ethers = { version = "2.0.10" }
serde = { version = "1" }
serde_json = { version = "1" }
strum = { version = "0.25.0" }
strum_macros = { version = "0.25.2" }
bincode = { version = "1.3.3" }
hex-literal = { version = "0.4.1" }
bytes = { version = "1.5.0" }
byteorder = { workspace = true }
halo2curves = { workspace = true }
wasi = { version = "0.11.0" }
wat = { version = "1.0.69" }
thiserror = { version = "1.0.40" }
keccak-hash = { version = "0.10.0" }
eth_trie = { version = "0.3.0" }
rlp = { version = "0.5.2" }
bitvec = { version = "1" }
k256 = { version = "0.13.1" }
sha2 = { version = "0.10.8" }
once_cell = { version = "1.19.0" }

[dev-dependencies]
wat = "1.0.69"
hex-literal = "0.4.1"

[features]
