[package]
name = "fluentbase-sdk"
description = "Fluentbase SDK"
version = "0.1.0"
edition = "2021"

[dependencies]
fluentbase-rwasm = { path = "../rwasm", optional = true }
k256 = { version = "0.13.1", default-features = false, features = ["ecdsa"], optional = true }

[dev-dependencies]
hex-literal = "0.4.1"
hex = "0.4.3"
sha2 = "0.10.8"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
runtime = ["dep:fluentbase-rwasm", "dep:k256"]
