[package]
name = "fluentbase-sdk"
description = "Fluentbase SDK"
version = "0.1.0"
edition = "2021"

[dependencies]
fluentbase-codec = { path = "../codec", default-features = false }
fluentbase-runtime = { path = "../runtime", optional = true }
fluentbase-rwasm = { path = "../rwasm", optional = true }
fluentbase-poseidon = { path = "../poseidon", optional = true }
k256 = { version = "0.13.1", default-features = false, features = ["ecdsa"], optional = true }
eth_trie = { version = "0.3.0", optional = true }
keccak-hash = { version = "0.10.0", optional = true }
halo2curves = { git = "https://github.com/scroll-tech/halo2curves.git", branch = "0.3.1-derive-serde", optional = true }
#alloy-sol-types = { version = "0.5.1", default-features = false }
alloy-primitives = { workspace = true }
lazy_static = "1.4.0"
byteorder = { workspace = true }
#wee_alloc = "0.4.5"
paste = { workspace = true }
lol_alloc = "0.4.0"

[dev-dependencies]
hex-literal = "0.4.1"
hex = "0.4.3"
sha2 = "0.10.8"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["runtime", "evm"]
evm = []
runtime = [
    "fluentbase-codec/std",
    "dep:fluentbase-runtime",
    "dep:fluentbase-rwasm",
    "dep:fluentbase-poseidon",
    "dep:k256",
    "dep:eth_trie",
    "dep:keccak-hash",
    "dep:halo2curves",
]
disable_panic_handler = []
disable_allocator = []
