[package]
name = "fluentbase-statedb"
version = "0.1.0"
authors.workspace = true
repository.workspace = true
edition.workspace = true
readme.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
fluentbase-sdk = { path = "../sdk", default-features = false, features = ["evm"] }
fluentbase-types = { path = "../types", default-features = false }
byteorder = { workspace = true }
alloy-rlp = { version = "0.3.4", default-features = false }

[lib]
crate-type = ["cdylib", "staticlib"]