[package]
name = "fluentbase-types"
version = "0.1.0"
authors.workspace = true
repository.workspace = true
edition.workspace = true
readme.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
fluentbase-rwasm = { path = "../rwasm", default-features = false }
strum = { version = "0.25.0", optional = true }
strum_macros = { version = "0.25.2", optional = true }
alloy-primitives = { workspace = true }

[features]
default = ["std"]
std = [
    "dep:strum",
    "dep:strum_macros"
]