[package]
name = "fluentbase-chain-transition-verifier"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Fluentbase Node Verifier"

[lints]
workspace = true

[dependencies]
# fluent (for chainspec)
fluent = { path = "../fluent", default-features = false }

# reth
reth-storage-rpc-provider = { workspace = true }
reth-basic-payload-builder = { workspace = true }
reth-chain-state = { workspace = true }
reth-chainspec = { workspace = true, default-features = false }
reth-cli = { workspace = true }
reth-cli-commands = { workspace = true }
reth-cli-runner = { workspace = true }
reth-cli-util = { workspace = true }
reth-codecs = { workspace = true }
reth-codecs-derive = { workspace = true }
reth-config = { workspace = true, default-features = false }
reth-consensus = { workspace = true, default-features = false }
reth-consensus-common = { workspace = true, default-features = false }
reth-consensus-debug-client = { workspace = true }
reth-db = { workspace = true, default-features = false }
reth-db-api = { workspace = true }
reth-db-common = { workspace = true }
reth-db-models = { workspace = true, default-features = false }
reth-discv4 = { workspace = true }
reth-discv5 = { workspace = true }
reth-dns-discovery = { workspace = true }
reth-downloaders = { workspace = true }
reth-e2e-test-utils = { workspace = true }
reth-ecies = { workspace = true }
reth-engine-local = { workspace = true }
reth-engine-primitives = { workspace = true, default-features = false }
reth-engine-tree = { workspace = true }
reth-engine-service = { workspace = true }
reth-engine-util = { workspace = true }
reth-era = { workspace = true }
reth-era-downloader = { workspace = true }
reth-era-utils = { workspace = true }
reth-errors = { workspace = true }
reth-eth-wire = { workspace = true }
reth-eth-wire-types = { workspace = true }
reth-ethereum-payload-builder = { workspace = true }
reth-ethereum-cli = { workspace = true, default-features = false }
reth-ethereum-consensus = { workspace = true, default-features = false }
reth-ethereum-engine-primitives = { workspace = true, default-features = false }
reth-ethereum-forks = { workspace = true, default-features = false }
reth-ethereum-primitives = { workspace = true, default-features = false }
reth-ethereum = { workspace = true }
reth-etl = { workspace = true }
reth-evm = { workspace = true, default-features = false }
reth-evm-ethereum = { workspace = true, default-features = false }
reth-execution-errors = { workspace = true, default-features = false }
reth-execution-types = { workspace = true, default-features = false }
reth-exex = { workspace = true }
reth-exex-test-utils = { workspace = true }
reth-exex-types = { workspace = true }
reth-fs-util = { workspace = true }
reth-invalid-block-hooks = { workspace = true }
reth-ipc = { workspace = true }
reth-libmdbx = { workspace = true }
reth-mdbx-sys = { workspace = true }
reth-metrics = { workspace = true }
reth-net-banlist = { workspace = true }
reth-net-nat = { workspace = true }
reth-network = { workspace = true }
reth-network-api = { workspace = true }
reth-network-p2p = { workspace = true }
reth-network-peers = { workspace = true, default-features = false }
reth-network-types = { workspace = true }
reth-nippy-jar = { workspace = true }
reth-node-api = { workspace = true }
reth-node-builder = { workspace = true }
reth-node-core = { workspace = true }
reth-node-ethereum = { workspace = true }
reth-node-ethstats = { workspace = true }
reth-node-events = { workspace = true }
reth-node-metrics = { workspace = true }
reth-node-types = { workspace = true }
reth-payload-builder = { workspace = true }
reth-payload-builder-primitives = { workspace = true }
reth-payload-primitives = { workspace = true }
reth-payload-validator = { workspace = true }
reth-payload-util = { workspace = true }
reth-primitives = { workspace = true, default-features = false }
reth-primitives-traits = { workspace = true, default-features = false }
reth-provider = { workspace = true }
reth-prune = { workspace = true }
reth-prune-types = { workspace = true, default-features = false }
reth-revm = { workspace = true, default-features = false }
reth-rpc = { workspace = true }
reth-rpc-api = { workspace = true }
reth-rpc-api-testing-util = { workspace = true }
reth-rpc-builder = { workspace = true }
reth-rpc-e2e-tests = { workspace = true }
reth-rpc-engine-api = { workspace = true }
reth-rpc-eth-api = { workspace = true }
reth-rpc-eth-types = { workspace = true, default-features = false }
reth-rpc-layer = { workspace = true }
reth-rpc-server-types = { workspace = true }
reth-rpc-convert = { workspace = true }
reth-stages = { workspace = true }
reth-stages-api = { workspace = true }
reth-stages-types = { workspace = true, default-features = false }
reth-static-file = { workspace = true }
reth-static-file-types = { workspace = true, default-features = false }
reth-storage-api = { workspace = true, default-features = false }
reth-storage-errors = { workspace = true, default-features = false }
reth-tasks = { workspace = true }
reth-tokio-util = { workspace = true }
reth-tracing = { workspace = true, default-features = false }
reth-tracing-otlp = { workspace = true }
reth-transaction-pool = { workspace = true }
reth-trie = { workspace = true }
reth-trie-common = { workspace = true, default-features = false }
reth-trie-db = { workspace = true }
reth-trie-parallel = { workspace = true }
reth-trie-sparse = { workspace = true, default-features = false }
reth-zstd-compressors = { workspace = true, default-features = false }

# alloy
#alloy-rpc-types = { workspace = true, features = ["engine"] }
alloy-genesis = { workspace = true }

# misc
#aquamarine.workspace = true
clap = { workspace = true, features = ["derive", "env"] }
flate2 = { workspace = true }
eyre = { workspace = true }
serde_json = { workspace = true }
parking_lot = { workspace = true }

# for chainspec only
#sequoia-sqv = { version = "1", default-features = false, features = ["crypto-openssl"] }
#sequoia-openpgp = { version = "2.2.0", default-features = false, features = ["crypto-openssl"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking"] }
directories = "6.0.0"

[features]
default = []

[[bin]]
name = "chain-transition-verifier"
path = "src/main.rs"
