[package]
name = "fluentbase-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "fluentbase"
path = "src/main.rs"

[dependencies]
fluentbase-build = { path = "../../crates/build", default-features = false }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "blocking"] }
anyhow = "1"
hex = "0.4"
sha2 = "0.10"

[features]
default = []
std = ["fluentbase-build/std"]
